Обновил логику подсчёта сжигания калорий именно из жира; Добавил информацию в UI для компенсации углеводов; Добавил подсчёт и информацию в UI для дневного калоража на основании параметров пользователя и его активности; Исправил SonarQube замечания;